# win32-res-lib

./: CMakeLists.txt  Make.bat  icon-file.cc  icon-file.h  test.cc  win-dlg.cc  win-dlg.h  win-res.cc  win-res.h  win-resnm.cc  win-resnm.h
app/: common.h  icon-shrink.cc  lang-kill.cc  res-dump.cc
